--- a/텍스트데이터준비.ipynb
+++ b/텍스트데이터준비.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,8 @@
     "import nltk\n",
     "import spacy\n",
     "from spacy.tokenizer import Tokenizer\n",
-    "from spacy.util import compile_prefix_regex, compile_infix_regex, compile_suffix_regex"
+    "from spacy.util import compile_prefix_regex, compile_infix_regex, compile_suffix_regex\n",
+    "from spacy.lang.en import English"
    ]
   },
   {
@@ -172,7 +173,7 @@
       "memory_limit: 268435456\n",
       "locality {\n",
       "}\n",
-      "incarnation: 3657539448359556714\n",
+      "incarnation: 15552909417603532778\n",
       "xla_global_id: -1\n",
       ", name: \"/device:GPU:0\"\n",
       "device_type: \"GPU\"\n",
@@ -182,7 +183,7 @@
       "  links {\n",
       "  }\n",
       "}\n",
-      "incarnation: 4742121559241281078\n",
+      "incarnation: 1611159949812725631\n",
       "physical_device_desc: \"device: 0, name: NVIDIA GeForce GTX 1650 Ti, pci bus id: 0000:01:00.0, compute capability: 7.5\"\n",
       "xla_global_id: 416903419\n",
       "]\n"
@@ -888,7 +889,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20000/20000 [00:00<00:00, 195071.20it/s]\n"
+      "100%|██████████| 20000/20000 [00:00<00:00, 121825.45it/s]\n"
      ]
     },
     {
@@ -1143,7 +1144,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20000/20000 [00:00<00:00, 33265.63it/s]\n"
+      "100%|██████████| 20000/20000 [00:00<00:00, 26334.05it/s]\n"
      ]
     },
     {
@@ -1450,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1486,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1504,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1525,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1559,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1568,22 +1569,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('tok2vec', <spacy.pipeline.tok2vec.Tok2Vec at 0x265bc9ca2e0>),\n",
-       " ('tagger', <spacy.pipeline.tagger.Tagger at 0x265bc9ca400>),\n",
-       " ('parser', <spacy.pipeline.dep_parser.DependencyParser at 0x265c6085970>),\n",
+       "[('tok2vec', <spacy.pipeline.tok2vec.Tok2Vec at 0x2dc8013c9a0>),\n",
+       " ('tagger', <spacy.pipeline.tagger.Tagger at 0x2dc8013cc40>),\n",
+       " ('parser', <spacy.pipeline.dep_parser.DependencyParser at 0x2dc85b43510>),\n",
        " ('attribute_ruler',\n",
-       "  <spacy.pipeline.attributeruler.AttributeRuler at 0x265c5ce9200>),\n",
-       " ('lemmatizer', <spacy.lang.en.lemmatizer.EnglishLemmatizer at 0x265c62fcac0>),\n",
-       " ('ner', <spacy.pipeline.ner.EntityRecognizer at 0x265c60859e0>)]"
+       "  <spacy.pipeline.attributeruler.AttributeRuler at 0x2dc85e51600>),\n",
+       " ('lemmatizer', <spacy.lang.en.lemmatizer.EnglishLemmatizer at 0x2dc85e8f880>),\n",
+       " ('ner', <spacy.pipeline.ner.EntityRecognizer at 0x2dc80256b30>)]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1595,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1613,7 +1614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1624,34 +1625,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "My\n",
-      "best\n",
-      "friend\n",
-      "Ryan\n",
-      "Peters\n",
-      "likes\n",
-      "fancy\n",
-      "adventure\n",
-      "games\n",
-      ".\n"
+      "My|best|friend|Ryan|Peters|likes|fancy|adventure|games|.|"
      ]
     }
    ],
    "source": [
     "for token in doc : \n",
-    "    print(token, sep='|')"
+    "    print(token, end='|')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1675,7 +1667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1826,7 +1818,7 @@
        "8      games       game    False      True   NOUN      dobj                O"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1844,32 +1836,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "@Pete\n",
-      ":\n",
-      "choose\n",
-      "low\n",
-      "-\n",
-      "carb\n",
-      "#\n",
-      "food\n",
-      "#\n",
-      "eat\n",
-      "-\n",
-      "smart\n",
-      ".\n",
-      "_\n",
-      "url\n",
-      "_\n",
-      ";-)\n",
-      "😋\n",
-      "👍\n"
+      "@Pete|:|choose|low|-|carb|#food|#eat|-|smart|.|_url_|;-)|😋|👍|"
      ]
     }
    ],
@@ -1879,12 +1853,12 @@
     "doc = nlp(text)\n",
     "\n",
     "for token in doc : \n",
-    "    print(token, sep='|')"
+    "    print(token, end='|')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1892,12 +1866,12 @@
     "def custom_tokenizer(nlp) : \n",
     "    # re.search와 일치하는 패턴을 제외하고 기본 패턴을 사용한다.\n",
     "    prefixes = [pattern for pattern in nlp.Defaults.prefixes \n",
-    "                if pattern not in ['-','_','#']]\n",
+    "                if pattern not in ['-', '_', '#']]\n",
     "    suffixes = [pattern for pattern in nlp.Defaults.suffixes\n",
     "                if pattern not in ['_']]\n",
-    "    infixes = [pattern for pattern in nlp.Defaults.infixes\n",
-    "               if pattern not in ['xx-xx']]\n",
-    "    \n",
+    "    infixes  = [pattern for pattern in nlp.Defaults.infixes\n",
+    "                if not re.search(pattern, 'xx-xx')]\n",
+    "\n",
     "    return Tokenizer(vocab          = nlp.vocab, \n",
     "                     rules          = nlp.Defaults.tokenizer_exceptions,\n",
     "                     prefix_search  = compile_prefix_regex(prefixes).search,\n",
@@ -1908,7 +1882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1918,36 +1892,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "@Pete\n",
-      ":\n",
-      "choose\n",
-      "low\n",
-      "-\n",
-      "carb\n",
-      "#food\n",
-      "#eat\n",
-      "-\n",
-      "smart\n",
-      ".\n",
-      "_url_\n",
-      ";-)\n",
-      "😋\n",
-      "👍\n"
+      "@Pete|:|choose|low-carb|#food|#eat-smart|.|_url_|;-)|😋|👍|"
      ]
     }
    ],
    "source": [
     "doc = nlp(text)\n",
     "for token in doc : \n",
-    "    print(token, sep='|')"
+    "    print(token, end='|')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 불용어 제거"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Dear, Ryan, need, sit, talk, Regards, Pete]\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"Dear Ryan, we need to sit down and talk. Regards, Pete\"\n",
+    "doc = nlp(text)\n",
+    "\n",
+    "non_stop = [t for t in doc if not t.is_stop and not t.is_punct]\n",
+    "print(non_stop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nlp = spacy.load('en_core_web_sm')\n",
+    "nlp.vocab['down'].is_stop = False\n",
+    "nlp.vocab['Dear'].is_stop = True\n",
+    "nlp.vocab['Regrads'].is_stop = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Ryan, need, sit, down, talk, Regards, Pete]\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"Dear Ryan, we need to sit down and talk. Regards, Pete\"\n",
+    "doc = nlp(text)\n",
+    "\n",
+    "non_stop = [t for t in doc if not t.is_stop and not t.is_punct]\n",
+    "print(non_stop)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 해당 언어 클래스의 하위 클래스를 생성하고 거기에 자신의 불용어 목록 만들기(스페이시 3.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ryan|need|sit|down|talk|Pete|"
+     ]
+    }
+   ],
+   "source": [
+    "excluded_stop_words = {'down'}\n",
+    "included_stop_words = {'dear','regards'}\n",
+    "\n",
+    "class CustomEnglishDefaults(English.Defaults) : \n",
+    "    stop_words = English.Defaults.stop_words.copy()\n",
+    "    stop_words -= excluded_stop_words\n",
+    "    stop_words |= included_stop_words # |= : in place set연산자(합집합을 구한 후 원래 집합에 결과 할당)\n",
+    "\n",
+    "class CustomEnglish(English) : \n",
+    "    Defaults = CustomEnglishDefaults\n",
+    "\n",
+    "nlp = CustomEnglish()\n",
+    "\n",
+    "text = 'Dear Ryan, we need to sit down and talk. Regards, Pete'\n",
+    "doc = nlp.make_doc(text)  # only tokenize\n",
+    "\n",
+    "tokens_wo_top = [token for token in doc]\n",
+    "for token in doc : \n",
+    "    if not token.is_stop and not token.is_punct : \n",
+    "        print(token, end='|')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reset nlp to original\n",
+    "nlp = spacy.load('en_core_web_sm')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
