--- a/텍스트데이터준비.ipynb
+++ b/텍스트데이터준비.ipynb
@@ -2015,12 +2015,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
     "# reset nlp to original\n",
     "nlp = spacy.load('en_core_web_sm')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 품사 기반 원형 추출"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my|good|friend|Ryan|Peters|like|fancy|adventure|game|.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 원형 복원 : lemma_속성으로 접근 가능\n",
+    "text = \"My best friend Ryan Peters likes fancy adventure games.\"\n",
+    "doc = nlp(text)\n",
+    "\n",
+    "print(*[t.lemma_ for t in doc], sep='|')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[friend, Ryan, Peters, adventure, games]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문서에 명사와 고유명사만 있는 목록 생성하기\n",
+    "text = \"My best friend Ryan Peters likes fancy adventure games.\"\n",
+    "doc = nlp(text)\n",
+    "\n",
+    "nouns = [t for t in doc if t.pos_ in ['NOUN','PROPN']]\n",
+    "print(nouns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best|friend|fancy|adventure|games\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 샘플 문장에서 형용사와 명사의 토큰 추출하기\n",
+    "tokens = textacy.extract.words(doc,\n",
+    "                               filter_stops = True,           # 기본은 True(불용어 허용 안함.)\n",
+    "                               filter_punct = True,           # 기본은 True(구두점을 허용 안함.)\n",
+    "                               filter_nums = True,            # 기본은 False\n",
+    "                               include_pos = ['ADJ', 'NOUN'], # 기본은 None(모든 품사 허용)\n",
+    "                               exclude_pos = None,            # 기본은 None(모든 품사를 배제하지 않음.)\n",
+    "                               min_freq=1)\n",
+    "\n",
+    "print(*[t for t in tokens], sep='|')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "good|friend|fancy|adventure|game\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 단어의 원형 목록을 추출하는 함수\n",
+    "def extract_lemmas(doc, **kwargs) : \n",
+    "    return [t.lemma_ for t in textacy.extract.words(doc, **kwargs)]\n",
+    "\n",
+    "lemmas = extract_lemmas(doc, include_pos=['ADJ','NOUN'])\n",
+    "print(*lemmas, sep='|')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 명사구 추출"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "good friend|fancy adventure|fancy adventure game\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 형용사가 앞에 있는 명사 시퀀스 추출하기\n",
+    "text = 'My best friend Ryan Peters likes fancy adventure games.'\n",
+    "doc = nlp(text)\n",
+    "\n",
+    "patterns = [\"POS:ADJ POS:NOUN:+\"]\n",
+    "\n",
+    "if textacy.__version__ < '0.11':\n",
+    "    # as in book\n",
+    "    spans = textacy.extract.matches(doc, patterns=patterns)\n",
+    "else:\n",
+    "    # new textacy version\n",
+    "    spans = textacy.extract.matches.token_matches(doc, patterns=patterns)\n",
+    "    \n",
+    "# spans = textacy.extract.matches(doc, patterns=patterns)\n",
+    "print(*[s.lemma_ for s in spans], sep='|')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My best friend|Ryan Peters|fancy adventure games\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 명사구 추출(대명사와 한정사도 포함될 수 있음)\n",
+    "print(*doc.noun_chunks, sep='|')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "good_friend|fancy_adventure|fancy_adventure_game|adventure_game\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 품사 패턴을 기반으로 명사구 추출하기(구분 문자 사용)\n",
+    "# 형용사나 명사 뒤에 명사가 오는 구절 추출하기\n",
+    "def extract_noun_phrases(doc, preceding_pos=['NOUN'], sep='_'):\n",
+    "    patterns = []\n",
+    "    for pos in preceding_pos:\n",
+    "        patterns.append(f\"POS:{pos} POS:NOUN:+\")\n",
+    "\n",
+    "    if textacy.__version__ < '0.11':\n",
+    "        # as in book\n",
+    "        spans = textacy.extract.matches(doc, patterns=patterns)\n",
+    "    else:\n",
+    "        # new textacy version\n",
+    "        spans = textacy.extract.matches.token_matches(doc, patterns=patterns)\n",
+    "\n",
+    "    return [sep.join([t.lemma_ for t in s]) for s in spans]\n",
+    "\n",
+    "print(*extract_noun_phrases(doc, ['ADJ', 'NOUN']), sep='|')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 개체명 추출"
    ]
   },
   {
