--- a/텍스트데이터준비.ipynb
+++ b/텍스트데이터준비.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,8 @@
     "import spacy\n",
     "from spacy.tokenizer import Tokenizer\n",
     "from spacy.util import compile_prefix_regex, compile_infix_regex, compile_suffix_regex\n",
-    "from spacy.lang.en import English"
+    "from spacy.lang.en import English\n",
+    "from spacy import displacy"
    ]
   },
   {
@@ -173,7 +174,7 @@
       "memory_limit: 268435456\n",
       "locality {\n",
       "}\n",
-      "incarnation: 15552909417603532778\n",
+      "incarnation: 7027677138084711477\n",
       "xla_global_id: -1\n",
       ", name: \"/device:GPU:0\"\n",
       "device_type: \"GPU\"\n",
@@ -183,7 +184,7 @@
       "  links {\n",
       "  }\n",
       "}\n",
-      "incarnation: 1611159949812725631\n",
+      "incarnation: 7412294439032967442\n",
       "physical_device_desc: \"device: 0, name: NVIDIA GeForce GTX 1650 Ti, pci bus id: 0000:01:00.0, compute capability: 7.5\"\n",
       "xla_global_id: 416903419\n",
       "]\n"
@@ -882,14 +883,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/20000 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 20000/20000 [00:00<00:00, 121825.45it/s]\n"
+      "100%|██████████| 20000/20000 [00:00<00:00, 145856.87it/s]\n"
      ]
     },
     {
@@ -1144,7 +1138,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20000/20000 [00:00<00:00, 26334.05it/s]\n"
+      "100%|██████████| 20000/20000 [00:01<00:00, 18584.73it/s]\n"
      ]
     },
     {
@@ -1575,13 +1569,13 @@
     {
      "data": {
       "text/plain": [
-       "[('tok2vec', <spacy.pipeline.tok2vec.Tok2Vec at 0x2dc8013c9a0>),\n",
-       " ('tagger', <spacy.pipeline.tagger.Tagger at 0x2dc8013cc40>),\n",
-       " ('parser', <spacy.pipeline.dep_parser.DependencyParser at 0x2dc85b43510>),\n",
+       "[('tok2vec', <spacy.pipeline.tok2vec.Tok2Vec at 0x1c6ade830a0>),\n",
+       " ('tagger', <spacy.pipeline.tagger.Tagger at 0x1c6ade83520>),\n",
+       " ('parser', <spacy.pipeline.dep_parser.DependencyParser at 0x1c6b2e923c0>),\n",
        " ('attribute_ruler',\n",
-       "  <spacy.pipeline.attributeruler.AttributeRuler at 0x2dc85e51600>),\n",
-       " ('lemmatizer', <spacy.lang.en.lemmatizer.EnglishLemmatizer at 0x2dc85e8f880>),\n",
-       " ('ner', <spacy.pipeline.ner.EntityRecognizer at 0x2dc80256b30>)]"
+       "  <spacy.pipeline.attributeruler.AttributeRuler at 0x1c6b30e3c40>),\n",
+       " ('lemmatizer', <spacy.lang.en.lemmatizer.EnglishLemmatizer at 0x1c6b30f3880>),\n",
+       " ('ner', <spacy.pipeline.ner.EntityRecognizer at 0x1c6afbfed60>)]"
       ]
      },
      "execution_count": 42,
@@ -1614,7 +1608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1625,7 +1619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1643,7 +1637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1667,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1818,7 +1812,7 @@
        "8      games       game    False      True   NOUN      dobj                O"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1836,14 +1830,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "@Pete|:|choose|low|-|carb|#food|#eat|-|smart|.|_url_|;-)|😋|👍|"
+      "@Pete|:|choose|low|-|carb|#|food|#|eat|-|smart|.|_|url|_|;-)|😋|👍|"
      ]
     }
    ],
@@ -1858,7 +1852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1882,7 +1876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1892,7 +1886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1918,7 +1912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1939,7 +1933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1951,7 +1945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1979,7 +1973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -2015,7 +2009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2032,7 +2026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -2053,7 +2047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -2075,7 +2069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2101,7 +2095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -2130,7 +2124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -2161,7 +2155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -2179,7 +2173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -2219,10 +2213,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(James O'Neill, PERSON) (World Cargo Inc, ORG) (San Francisco, GPE) "
+     ]
+    }
+   ],
+   "source": [
+    "# label_ : 개체 유형에 대한 속성\n",
+    "text = \"James O'Neill, chairman of World Cargo Inc, lives in San Francisco.\"\n",
+    "doc = nlp(text)\n",
+    "\n",
+    "for ent in doc.ents : \n",
+    "    print(f'({ent.text}, {ent.label_})', end=' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">\n",
+       "<mark class=\"entity\" style=\"background: #aa9cfc; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    James O'Neill\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">PERSON</span>\n",
+       "</mark>\n",
+       ", chairman of \n",
+       "<mark class=\"entity\" style=\"background: #7aecec; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    World Cargo Inc\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">ORG</span>\n",
+       "</mark>\n",
+       ", lives in \n",
+       "<mark class=\"entity\" style=\"background: #feca74; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    San Francisco\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">GPE</span>\n",
+       "</mark>\n",
+       ".</div></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# displacy : 개체명 인식을 위한 시각화 제공\n",
+    "displacy.render(doc, style='ent')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 특정 유형의 명명된 개체를 추출하기\n",
+    "def extract_entities(doc, include_types=None, sep='_') : \n",
+    "    ents = textacy.extract.entities(doc,\n",
+    "                                    include_types=include_types,\n",
+    "                                    exclude_types=None,\n",
+    "                                    drop_determiners=True,\n",
+    "                                    min_freq=1)\n",
+    "    \n",
+    "    return [sep.join([t.lemma_ for t in e])+'/'+e.label_ for e in ents]"
+   ]
   }
  ],
  "metadata": {
